Possible GitHub Pages Styling Fix

--- a/Source/CSS/main.scss
+++ b/Source/CSS/main.scss
@@ -2,7 +2,7 @@
 ---
 
 // Import base theme.
-@import "minima";
+@import "";
 
 // Import user-selected syntax highlighter stylesheet.
 @import "Syntax Highlighter";
