Fix for GitHub Pages
- Remove front matter from style.scss
- Update syntax for importing base (minima) theme in style.scss

--- a/Source/CSS/style.scss
+++ b/Source/CSS/style.scss
@@ -1,8 +1,9 @@
----
----
+// ---
+// ---
 
 // Import base theme.
-@import "minima";
+// @import "minima";
+@import "";
 
 // Import user-selected syntax highlighter stylesheet.
 @import "Syntax Highlighter";
