--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -1,8 +1,9 @@
----
----
+// ---
+// ---
 
 // Import base theme.
-@import "minima";
+// @import "minima";
+@import "";
 
 // Import user-selected syntax highlighter stylesheet.
 @import "Syntax Highlighter";
