Revert "Fix for GitHub Pages"
Restore support for new versions of themes using main.scss.

This reverts commit dc276198af67518a952288836b455cf018d1b7a3.

Signed-off-by: David Chamberlain <chaoscommencer@users.noreply.github.com>

--- a/source/css/main.scss
+++ b/source/css/main.scss
@@ -1,9 +1,8 @@
-// ---
-// ---
+---
+---
 
 // Import base theme.
-// @import "minima";
-@import "";
+@import "minima";
 
 // Import user-selected syntax highlighter stylesheet.
 @import "Syntax Highlighter";
