--- a/source/includes/head.html
+++ b/source/includes/head.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="/assets/images/favicon.svg">
     <link rel="stylesheet" href="{{ "/css/style.css" | relative_url }}">
     {%- feed_meta -%}
-    {%- if jekyll.environment == 'production' and site.google_analytics -%}
+    {%- if jekyll.environment == 'production' and site.data.about.google_analytics -%}
     {%- include google-analytics.html -%}
     {%- endif -%}
 </head>
