Address Sass '@import' deprecation warnings
Deprecation warnings:
- Deprecation Warning [import]: Sass @import rules are deprecated and will be removed in Dart Sass 3.0.0.
  More info and automated migrator: https://sass-lang.com/d/import

Migrate to use of '@use', '@forward', and '@include' instead

Signed-off-by: David Chamberlain <chaoscommencer@users.noreply.github.com>

--- a/source/css/main.scss
+++ b/source/css/main.scss
@@ -2,7 +2,7 @@
 ---
 
 // Import base theme.
-@import "minima";
+@forward "minima";
 
 // Import user-selected syntax highlighter stylesheet.
-@import "Syntax Highlighter";
+@forward "Syntax Highlighter";
