--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -1,9 +1,8 @@
-// ---
-// ---
+---
+---
 
 // Import base theme.
-// @import "minima";
-@import "";
+@import "minima";
 
 // Import user-selected syntax highlighter stylesheet.
 @import "Syntax Highlighter";
