--- a/Source/CSS/style.scss
+++ b/Source/CSS/style.scss
@@ -1,9 +1,9 @@
-// ---
-// ---
+---
+---
 
 // Import base theme.
-// @import "minima";
-@import "";
+@import "minima";
+// @import "";
 
 // Import user-selected syntax highlighter stylesheet.
 @import "Syntax Highlighter";
